# labordoc-next

./: INSTALL  configure.ac
modules/bibcirculation/lib/: bibcirculation_templates.py
modules/bibexport/lib/: bibexport_method_sitemap.py
modules/bibfield/lib/functions/: is_type_isbn.py
modules/bibformat/etc/format_templates/: Default_HTML_actions.bft  Default_HTML_similarity.bft  HTMLdetailedILOtest1.bft  HTMLdetailedILOtest2.bft  ILOBangkokcallno.bft  ILOBibliography.bft  ILOCIPformat.bft  ILOHTMLbrief.bft  ILOHTMLdetailed.bft  ILOHTMLholdings.bft  ILOHTMLtitleisbn.bft  ILOHoldingslink.bft  ILOOAIDC.xsl  Makefile.am  ReDIFPaper1.0forGET.bft  ReDIFPaper1.0forwp.bft
modules/bibformat/etc/output_formats/: BCALL.bfo  CIP.bfo  HB.bfo  HD.bfo  HL.bfo  HNP.bfo  HTEST.bfo  IBIB.bfo  ISBN.bfo  Makefile.am  RDIFP1.bfo  RDIFP2.bfo  XILODC.bfo
modules/bibformat/etc/templates/: Makefile.am  format_records_cip.tpl  format_records_ibib.tpl  format_records_xd.tpl  format_records_xr.tpl
modules/bibformat/etc/templates/format_templates/: Default_HTML_brief.tpl  Default_HTML_detailed.tpl  Default_HTML_new_publications.tpl
modules/bibformat/lib/: bibformat.py  bibformat_engine.py  bibformat_templates.py
modules/bibformat/lib/elements/: Makefile.am  bfe_ILO_abstract.py  bfe_ILO_authors.py  bfe_ILO_authors_publ.py  bfe_ILO_authors_test.py  bfe_ILO_callno_for_bangkok.py  bfe_ILO_callno_for_bibl.py  bfe_ILO_cip_articles.py  bfe_ILO_cip_authors.py  bfe_ILO_cip_city.py  bfe_ILO_cip_date.py  bfe_ILO_cip_edition.py  bfe_ILO_cip_editors.py  bfe_ILO_cip_endpage.py  bfe_ILO_cip_facet.py  bfe_ILO_cip_isbn.py  bfe_ILO_cip_isnn.py  bfe_ILO_cip_keywords.py  bfe_ILO_cip_pageandseries.py  bfe_ILO_cip_prolog.py  bfe_ILO_cip_publisher.py  bfe_ILO_cip_series.py  bfe_ILO_cip_title.py  bfe_ILO_cip_userdef4.py  bfe_ILO_cip_volume.py  bfe_ILO_contents.py  bfe_ILO_conventions.py  bfe_ILO_conventions_doctype.py  bfe_ILO_conventions_link.py  bfe_ILO_conventions_report.py  bfe_ILO_date.py  bfe_ILO_fulltext.py  bfe_ILO_holdings_link.py  bfe_ILO_imprint.py  bfe_ILO_isbn.py  bfe_ILO_isbn_publ.py  bfe_ILO_itemsymbol.py  bfe_ILO_itemsymbol_detailed.py  bfe_ILO_itemsymbol_detailed_test.py  bfe_ILO_itemsymbol_test.py  (+37 more)
modules/bibformat/lib/template_context_functions/: bfn_get_fulltext_snippets.py  tfn_get_back_to_search_links.py  tfn_get_fulltext_snippets.py
modules/bibindex/lib/: bibindex_engine.py  bibindex_fixtures.py  bibindex_model.py
modules/bibrank/etc/: Makefile.am  au.cfg  template_index_term_count.cfg  template_word_similarity_solr.cfg  ti.cfg  yt.cfg  yta.cfg
modules/bibrank/lib/: bibrank_word_searcher.py
modules/bibsched/lib/tasklets/: Makefile.am  bst_autocompletion_cache.py  bst_format_tag_enricher.py  bst_get_new_ilo_publications.py  bst_update_ilo_kb_files.py
modules/bibsort/etc/: bibsort.cfg
modules/bibsort/lib/: bibsort_engine.py
modules/bibupload/lib/: bibupload.py
modules/miscutil/demo/: democfgdata.sql
modules/miscutil/lib/: Makefile.am  author_descending.py  messages.py  publication_date_ascending.py  publication_date_descending.py  solrutils_bibindex_searcher.py  solrutils_bibrank_indexer.py  sqlalchemyutils.py  title_descending.py  urlutils.py
modules/miscutil/lib/solrutils/: solrconfig.xml
modules/miscutil/sql/: tabbibclean.sql  tabcreate.sql  tabdrop.sql  tabfill.sql
modules/websearch/etc/templates/: Makefile.am  record.html  record_back_to_search_links.html  record_holdings.html  record_metadata.html  record_usage.html  websearch_helpers.html  websearch_index.html  websearch_results.html  websearch_search.html
modules/websearch/lib/: record_blueprint.py  search_engine.py  search_engine_config.py  websearch_blueprint.py  websearch_cache.py  websearch_facet.js  websearch_facet_builders.py  websearch_fixtures.py  websearch_fixtures_demosite.py  websearch_forms.py  websearch_model.py  websearch_regression_tests.py  websearch_templates.py  websearch_typeahead.js  websearch_webcoll.py  websearchadminlib.py
modules/websearch/lib/facets/: disabled_facet_fulltext.py  facet_attachment.py  facet_format.py  facet_fulltext.py  facet_lang.py  facet_location.py  facet_year.py
modules/websession/etc/templates/: webaccount_login.html
modules/websession/lib/: session_flask.py
modules/webstat/lib/: webstat_engine.py
modules/webstyle/: Makefile.am
modules/webstyle/css/: Makefile.am  invenio.css
modules/webstyle/etc/templates/: breadcrumbs.html  footer.html  header.html  page.html
modules/webstyle/font/: Makefile.am
modules/webstyle/img/: Makefile.am
modules/webstyle/lib/: Makefile.am  invenio.js  webinterface_handler_flask.py  webinterface_handler_local.py
modules/websubmit/lib/: websubmit_fixtures_demosite.py
modules/websubmit/web/: publiline.py
modules/webtag/etc/templates/: webtag_record_base.html
modules/webtag/lib/: webtag_blueprint.py  webtag_user_settings.py
modules/webtag/lib/template_context_functions/: tfn_webtag_record_tags.py
po/: es.po  fr.po
