## This file is part of Invenio.
## Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2013 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

pylibdir=$(libdir)/python/invenio/bibformat_elements

pylib_DATA = bfe_field.py bfe_title.py bfe_authors.py bfe_abstract.py bfe_affiliation.py \
             bfe_imprint.py bfe_fulltext.py bfe_place.py bfe_publisher.py bfe_topbanner.py \
             bfe_date_rec.py bfe_keywords.py bfe_notes.py bfe_reprints.py bfe_publi_info.py \
             bfe_cited_by.py bfe_references.py bfe_title_brief.py \
             bfe_report_numbers.py bfe_additional_report_numbers.py bfe_url.py \
             bfe_addresses.py bfe_contact.py bfe_photo_resources_brief.py \
             bfe_collection.py bfe_editors.py bfe_bibtex.py bfe_edit_record.py \
             bfe_date.py bfe_xml_record.py bfe_external_publications.py __init__.py \
             bfe_bfx_engine.py bfe_creation_date.py bfe_server_info.py bfe_issn.py \
             bfe_client_info.py bfe_language.py bfe_record_id.py bfe_comments.py \
             bfe_pagination.py bfe_fulltext_mini.py bfe_year.py bfe_isbn.py \
             bfe_appears_in_collections.py bfe_photos.py bfe_record_stats.py \
             bfe_edit_files.py bfe_plots.py bfe_plots_thumb.py bfe_sword_push.py \
             bfe_video_sources.py bfe_video_bigthumb.py \
             bfe_aid_authors.py bfe_doi.py bfe_addthis.py \
             bfe_duration.py bfe_record_url.py bfe_video_selector.py \
             bfe_video_platform_downloads.py bfe_video_platform_suggestions.py \
             bfe_video_platform_sources.py bfe_sciencewise.py bfe_bookmark.py \
             bfe_oai_marcxml.py bfe_copyright.py bfe_meta.py bfe_meta_opengraph_image.py \
             bfe_meta_opengraph_video.py bfe_webauthorpage_affiliations.py \
             # bfe_qrcode.py \
			 bfe_ILO_abstract.py \ 
			 bfe_ILO_authors.py \ 
			 bfe_ILO_authors_publ.py \ 
			 bfe_ILO_authors_test.py \
			 bfe_ILO_callno_for_bangkok.py \
			 bfe_ILO_callno_for_bibl.py \
			 bfe_ILO_cip_articles.py \
			 bfe_ILO_cip_authors.py \
			 bfe_ILO_cip_city.py \
			 bfe_ILO_cip_date.py \
			 bfe_ILO_cip_edition.py \
			 bfe_ILO_cip_editors.py \
			 bfe_ILO_cip_endpage.py \
			 bfe_ILO_cip_facet.py \
			 bfe_ILO_cip_isbn.py \
			 bfe_ILO_cip_isnn.py \
			 bfe_ILO_cip_keywords.py \
			 bfe_ILO_cip_pageandseries.py \
			 bfe_ILO_cip_prolog.py \
			 bfe_ILO_cip_publisher.py \
			 bfe_ILO_cip_series.py \
			 bfe_ILO_cip_title.py \
			 bfe_ILO_cip_userdef4.py \
			 bfe_ILO_cip_volume.py \
			 bfe_ILO_contents.py \
			 bfe_ILO_conventions.py \
			 bfe_ILO_conventions_doctype.py \
			 bfe_ILO_conventions_link.py \
			 bfe_ILO_conventions_report.py \
			 bfe_ILO_date.py \
			 bfe_ILO_fulltext.py \
			 bfe_ILO_holdings_link.py \
			 bfe_ILO_imprint.py \
			 bfe_ILO_isbn.py \
			 bfe_ILO_isbn_publ.py \
			 bfe_ILO_itemsymbol.py \
			 bfe_ILO_itemsymbol_detailed.py \
			 bfe_ILO_itemsymbol_detailed_test.py \
			 bfe_ILO_itemsymbol_test.py \
			 bfe_ILO_itemsymboltest.py \
			 bfe_ILO_links.py \
			 bfe_ILO_meeting.py \
			 bfe_ILO_notes.py \
			 bfe_ILO_other_versions.py \
			 bfe_ILO_pages.py \
			 bfe_ILO_pages_for_bibl.py \
			 bfe_ILO_place.py \
			 bfe_ILO_publisher.py \
			 bfe_ILO_publisher_place.py \
			 bfe_ILO_publisher_place_for_bibl.py \
			 bfe_ILO_rdifp1_abstract.py \
			 bfe_ILO_rdifp1_authors.py \
			 bfe_ILO_rdifp1_date.py \
			 bfe_ILO_rdifp1_handle.py \
			 bfe_ILO_rdifp1_keywords.py \
			 bfe_ILO_rdifp1_links.py \
			 bfe_ILO_rdifp1_pages.py \
			 bfe_ILO_rdifp1_publishedin.py \
			 bfe_ILO_rdifp1_title.py \
			 bfe_ILO_rdifp2_handle.py \
			 bfe_ILO_request_button.py \
			 bfe_ILO_series.py \
			 bfe_ILO_sfx_link.py \
			 bfe_ILO_similar_records.py \
			 bfe_ILO_subjects.py \
			 bfe_ILO_title.py \
			 bfe_ILO_title_brief.py \
			 bfe_ILO_title_for_bangkok.py \
			 bfe_ILO_title_for_bibl.py \
			 bfe_ILO_title_publ.py \
			 bfe_ILO_title_with_link.py \
			 bfe_ILO_title_with_link_no_style.py \
			 bfe_ILO_topbanner.py \
			 bfe_ILO_voyager_callno.py \
			 bfe_ILO_year.py \
			 bfe_ILO_year_brief.py \
			 bfe_similar_records.py

tmpdir = $(prefix)/var/tmp/tests_bibformat_elements

tmp_DATA = test_1.py bfe_test_2.py bfe_test_4.py test3.py test_5.py \
           test_no_element.test __init__.py

EXTRA_DIST = $(pylib_DATA) $(tmp_DATA)

CLEANFILES = *~ *.tmp *.pyc
